--- a/src/main/resources/templates/save-form.mustache
+++ b/src/main/resources/templates/save-form.mustache
@@ -14,7 +14,7 @@
     4. http 메서드 생성 method="post" -post방식
     5. 바디 데이터를 들고갈 contentType 설정
     -->
-    <form action="/v2/board/save" method="post" enctype="application/x-www-form-urlencoded">
+    <form action="/board/save" method="post" enctype="application/x-www-form-urlencoded">
         <input type="text" name="title" placeholder="제목"><br>
         <input type="text" name="content" placeholder="내용"><br>
         <button type="submit">글쓰기</button>
